# lean-agent-loop

./: .env.example  AGENTS.md  CLAUDE.md  README.md  constraints.yaml  e2e-test.md  package-lock.json  package.json  pyproject.toml  routing.yaml
docs/: ENGINEERING.md  agent-flow.md  workflow.md
src/autopilot/: billing.py  cli.py  config.py  context.py  repl.py  run_manager.py  tracker.py
src/autopilot/commands/: ci_review.py  init.py  serve.py  ship.py  stats.py
src/autopilot/hooks/: precompact.py  pretool.py  stop.py
src/flow/: __init__.py  billing.py  cli.py  config.py  context.py  features.py  observe.py  ping.py  repl.py  router.py  run_manager.py  session_accounting.py  tracker.py  tui.py
src/flow/commands/: check.py  ci_review.py  doctor.py  features.py  init.py  serve.py  ship.py  stats.py  verify.py
src/flow/hooks/: postmerge.py  precompact.py  pretool.py  stop.py
tests/: test_ping.py
